--- a/app/index.html
+++ b/app/index.html
@@ -147,9 +147,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </section>
 
             <section data-route="u-appointment-overview">
-              <h3>Slots</h3>
+
               <template is="dom-if" if="{{isEqual(route, 'u-appointment-overview')}}" restamp="true">
-              <slot-list></slot-list>
+              <!-- <slot-list></slot-list> -->
 
               </template>
             </section>
@@ -163,7 +163,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </div>
 
 
-      
+
 
         </iron-pages>
         </div>
