--- a/app/admin.html
+++ b/app/admin.html
@@ -230,6 +230,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <!-- build:js scripts/app.js -->
   <script src="scripts/app.js"></script>
   <script src="scripts/hour.js"></script>
+  <script src="scripts/date.js"></script>
   <script type="text/javascript">
     app.isEqual = function(x, y) {
       return x === y;
