--- a/app/elements/create-time/create-time.html
+++ b/app/elements/create-time/create-time.html
@@ -460,6 +460,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           var getAMPM = origStartTime.substring(origStartTime.length - 2, origStartTime.length);
           if (getAMPM === "PM") {
+            if (hours === 12) {
+              hours = 0;
+            }
             var hours = hours + 12;
           }
 
@@ -476,6 +479,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           var getAMPM = origEndTime.substring(origEndTime.length - 2, origEndTime.length);
           if (getAMPM === "PM") {
+            if (hours === 12) {
+              hours = 0;
+            }
             var hours = hours + 12;
           }
 
@@ -484,12 +490,96 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         createSlots: function(e) {
 
-          var startDate = moment(new Date(this.startDate));
-          var endDate = moment(new Date(this.endDate));
-          var startTime = moment(this.origStartTime);
-          var endTime = moment(this.origEndTime);
+          //variables for time
+          var origStartTime = this.$.timeStartPicker.time;
+          var origEndTime = this.$.timeEndPicker.time;
+          var startTime = moment(origStartTime);
+          var endTime = moment(origEndTime);
           var breakTime = this.break;
           var duration = this.duration;
+          var partTime = breakTime + duration;
+          var allStart = origStartTime.split(":");
+          var allEnd = origEndTime.split(":");
+          var hoursStart = parseInt(allStart[0]);
+          var minutesStart = allStart[1].substring(0, allStart[1].length - 2);
+          var hoursEnd = parseInt(allEnd[0]);
+          var minutesEnd = allEnd[1].substring(0, allEnd[1].length - 2);
+
+          var getAMPMStart = origStartTime.substring(origStartTime.length - 2, origStartTime.length);
+          if (getAMPMStart === "PM") {
+            if (hoursStart === 12) {
+              hoursStart = 0;
+            }
+            var hoursStart = hoursStart + 12;
+          }
+          var getAMPMEnd = origEndTime.substring(origEndTime.length - 2, origEndTime.length);
+          if (getAMPMEnd === "PM") {
+            if (hoursEnd === 12) {
+              hoursEnd = 0;
+            }
+            var hoursEnd = hoursEnd + 12;
+          }
+
+
+
+
+          //  console.log("jo",timeArray.length);
+
+          if (duration < 9 * 1) {
+            var t1 = new Hour("00:0" + duration.toString());
+          }
+          if (duration > 9 * 1) {
+            var t1 = new Hour("00:" + duration.toString());
+          }
+          if (breakTime < 9 * 1) {
+            var t2 = new Hour("00:0" + breakTime.toString());
+          }
+          if (breakTime > 9 * 1) {
+            var t2 = new Hour("00:" + breakTime.toString());
+          }
+          if (minutesStart < 9 * 1) {
+            var start = new Hour(hoursStart + ":0" + minutesStart);
+          }
+          if (minutesStart > 9 * 1) {
+            var start = new Hour(hoursStart + ":" + minutesStart);
+          }
+          var part = t1.add(t2);
+
+          if (hoursEnd <= hoursStart) {
+            if (minutesEnd <= minutesStart) {
+              alert("die Zeitangaben scheinen nicht korrekt zu sein");
+            }
+          }
+
+          var timeDiffer = (60 * hoursEnd + minutesEnd * 1) - (60 * hoursStart + minutesStart * 1);
+          var timeArray = new Array(parseInt(timeDiffer / partTime));
+
+
+          for (var i = 0; i < timeArray.length; i++) {
+            timeArray[i] = {
+              startTime: start.toString(),
+              endTime: (start.add(t1)).toString(),
+              availability: "true"
+            }
+            start = start.add(part);
+          }
+
+
+
+
+          console.log(part.toString());
+          console.log(start.toString());
+
+
+
+          //variables for date
+          var startDate = new Date(this.startDate);
+          var startDate2 = new Date(this.startDate);
+          var startDate3 = new Date(this.startDate);
+          var startDate4 = new Date(this.startDate);
+          var startDate5 = new Date(this.startDate);
+          var startDate6 = new Date(this.startDate);
+          var endDate = new Date(this.endDate);
           var monday = !this.mondayChecked;
           var tuesday = !this.tuesdayChecked;
           var wednesday = !this.wednesdayChecked;
@@ -497,119 +587,222 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           var friday = !this.fridayChecked;
           var saturday = !this.saturdayChecked;
 
-          var weekDay = 1;
+          var dateArray = [],
+            dateArray2 = [],
+            dateArray3 = [],
+            dateArray4 = [],
+            dateArray5 = [],
+            dateArray6 = [];
 
-          if(startDate.isBefore(endDate)){
 
 
-          var startWeekday;
-          // Determine the Start date
-          if (monday) {
-            startWeekday = 1;
-          } else if (tuesday) {
-            startWeekday = 2;
-          } else if (wednesday) {
-            startWeekday = 3;
-          } else if (thursday) {
-            startWeekday = 4;
-          } else if (friday) {
-            startWeekday = 5;
-          } else if (saturday) {
-            startWeekday = 6;
-          }
-          var newStartDate = startDate;
-          if (startWeekday != undefined) {
-            while (newStartDate.day() != startWeekday) {
-              newStartDate.add(1, 'days');
+          console.log("hi", endDate);
 
-            }
-            console.log("start", newStartDate);
-          }
 
-          var endWeekday;
-          var selected = [];
-          if (monday) {
-            endWeekday = 1;
-            var item = {};
-            item["day"] = endWeekday;
-            selected.push(item);
-          }
-          if (tuesday) {
-            endWeekday = 2;
-            var item = {};
-            item["day"] = endWeekday;
-            selected.push(item);
-          }
-          if (wednesday) {
-            endWeekday = 3;
-            var item = {};
-            item["day"] = 3;
-            selected.push(item);
-          }
-          if (thursday) {
-            endWeekday = 4;
-            var item = {};
-            item["day"] = endWeekday;
-            selected.push(item);
-          }
-          if (friday) {
-            friday = 5;
-            var item = {};
-            item["day"] = endWeekday;
-            selected.push(item);
-          }
-          if (saturday) {
-            endWeekday = 6;
-            var item = {};
-            item["day"] = endWeekday;
-            selected.push(item);
-          }
 
-          var newEndDate = endDate;
-          if (endWeekday != undefined) {
-            while (newEndDate.day() != endWeekday) {
-              newEndDate.subtract(1, 'days');
 
-            }
-            console.log("end", newStartDate);
 
-          }
-          // console.log("diff", newStartDate.diff(newEndDate, 'days'));
-          // console.log("da",startDate.day(2));
-          var dateArr = [];
-          console.log(newStartDate.day());
-          console.log("startWeekday",startWeekday);
-          if(selected.length === 1){
-            var day = selected[0].day;
-            var t = newStartDate;
-            var diff = newStartDate.diff(newEndDate, 'weeks') * -1;
-            for (var i = -1; i < diff; i++) {
-                var day = [];
-                var date = t;
-                day[date] = t;
-                dateArr.push(day);
-                t.add(7, "days");
+          if (endDate>startDate) {
+
+
+            var startWeekday;
+            // Determine the Start date
+            if (monday) {
+              if (startDate.is().monday()) {
+                var date1 = new Date(startDate.toShortDateString());
+                dateArray.push(date1);
               }
-          }
-          console.log(dateArr);
+              while (startDate.next().monday() <= endDate) {
+                var date2 = new Date(startDate.toShortDateString());
+                dateArray.push(date2);
+              }
 
-          // if (monday) {
-          //   var mondayStart = newStartDate;
+            }
+            if (tuesday) {
+              if (startDate2.is().tuesday()) {
+                var date3 = new Date(startDate2.toShortDateString());
+                dateArray2.push(date3);
+              }
+
+              while (startDate2.next().tuesday() <= endDate) {
+                var date4 = new Date(startDate2.toShortDateString());
+                dateArray2.push(date4);
+              }
+            }
+            if (wednesday) {
+              if (startDate3.is().wednesday()) {
+                var date5 = new Date(startDate3.toShortDateString());
+                dateArray3.push(date5);
+              }
+
+              while (startDate3.next().wednesday() <= endDate) {
+                var date6 = new Date(startDate3.toShortDateString());
+                dateArray3.push(date6);
+              }
+            }
+            if (thursday) {
+              if (startDate4.is().thursday()) {
+                var date7 = new Date(startDate4.toShortDateString());
+                dateArray4.push(date7);
+              }
+
+              while (startDate4.next().thursday() <= endDate) {
+                var date8 = new Date(startDate4.toShortDateString());
+                dateArray4.push(date8);
+              }
+
+            }
+            if (friday) {
+              if (startDate5.is().friday()) {
+                var date9 = new Date(startDate5.toShortDateString());
+                dateArray5.push(date9);
+              }
+
+              while (startDate5.next().friday() <= endDate) {
+                var date10 = new Date(startDate5.toShortDateString());
+                dateArray5.push(date10);
+              }
+            }
+            if (saturday) {
+              if (startDate6.is().saturday()) {
+                var date11 = new Date(startDate6.toShortDateString());
+                dateArray5.push(date11);
+              }
+
+              while (startDate6.next().saturday() <= endDate) {
+                var date12 = new Date(startDate6.toShortDateString());
+                dateArray6.push(date12);
+              }
+            }
+
+
+            var date_sort = function(date1, date2) {
+              if (date1 > date2) return 1;
+              if (date1 < date2) return -1;
+              return 0;
+            }
+
+
+            var completeDateArray = dateArray.concat(dateArray2, dateArray3, dateArray4, dateArray5);
+
+            completeDateArray.sort(date_sort);
+
+
+            var DocentQuery = Parse.Object.extend("Docent");
+            var query = new Parse.Query(DocentQuery);
+            query.equalTo("email", email);
+            query.first({
+              success: function(user) {
+
+                for (var i = 0; i < completeDateArray.length; i++) {
+
+                  var Slots = Parse.Object.extend("Slots");
+                  var slotQuery = new Slots();
+                  slotQuery.set("Docent", user);
+                  slotQuery.set("dates", moment(completeDateArray[i]));
+                  slotQuery.set("Slots", timeArray);
+                  slotQuery.save();
+                }
+
+              }
+            });
+
+
+
+            console.log("easy",completeDateArray);
+            /*  var newStartDate = startDate;
+              if (startWeekday != undefined) {
+                while (newStartDate.day() != startWeekday) {
+                  newStartDate.add(1, 'days');
+
+                }
+                console.log("start", newStartDate);
+              }
+
+              var endWeekday;
+              var selected = [];
+              if (monday) {
+                endWeekday = 1;
+                var item = {};
+                item["day"] = endWeekday;
+                selected.push(item);
+              }
+              if (tuesday) {
+                endWeekday = 2;
+                var item = {};
+                item["day"] = endWeekday;
+                selected.push(item);
+              }
+              if (wednesday) {
+                endWeekday = 3;
+                var item = {};
+                item["day"] = 3;
+                selected.push(item);
+              }
+              if (thursday) {
+                endWeekday = 4;
+                var item = {};
+                item["day"] = endWeekday;
+                selected.push(item);
+              }
+              if (friday) {
+                friday = 5;
+                var item = {};
+                item["day"] = endWeekday;
+                selected.push(item);
+              }
+              if (saturday) {
+                endWeekday = 6;
+                var item = {};
+                item["day"] = endWeekday;
+                selected.push(item);
+              }
+
+              var newEndDate = endDate;
+              if (endWeekday != undefined) {
+                while (newEndDate.day() != endWeekday) {
+                  newEndDate.subtract(1, 'days');
+
+                }
+                console.log("end", newStartDate);
+
+              }
+              // console.log("diff", newStartDate.diff(newEndDate, 'days'));
+              // console.log("da",startDate.day(2));
+              var dateArr = [];
+              console.log(newStartDate.day());
+              console.log("startWeekday",startWeekday);
+              if(selected.length === 1){
+                var day = selected[0].day;
+                var t = newStartDate;
+                var diff = newStartDate.diff(newEndDate, 'weeks') * -1;
+                for (var i = -1; i < diff; i++) {
+                    var day = [];
+                    var date = t;
+                    day[date] = t;
+                    dateArr.push(day);
+                    t.add(7, "days");
+                  }
+              }
+              console.log(dateArr);*/
+
+            // if (monday) {
+            //   var mondayStart = newStartDate;
             // var diff = newStartDate.diff(newEndDate, 'weeks') * -1;
-          //   console.log(diff);
-          //
-          //   for (var i = -1; i < diff; i++) {
-          //     var day = [];
-          //     var date = mondayStart;
-          //     day[date] = mondayStart;
-          //     dateArr.push(day);
-          //     mondayStart.add(7, "days");
-          //   }
-          // }
+            //   console.log(diff);
+            //
+            //   for (var i = -1; i < diff; i++) {
+            //     var day = [];
+            //     var date = mondayStart;
+            //     day[date] = mondayStart;
+            //     dateArr.push(day);
+            //     mondayStart.add(7, "days");
+            //   }
+            // }
 
 
-          }else{
-          alert("Startdate needs to be before the Enddate");
+          } else {
+            alert("Startdate needs to be before the Enddate");
           }
 
         }
