--- a/app/admin.html
+++ b/app/admin.html
@@ -231,6 +231,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <script src="scripts/app.js"></script>
   <script src="scripts/hour.js"></script>
   <script src="scripts/date.js"></script>
+  <script src="/bower_components/moment/locale/de.js"></script>
   <script type="text/javascript">
     app.isEqual = function(x, y) {
       return x === y;
